# BandBuddyCapstone

./: .gitignore  README.md  play_loopback.sh
Firmware/code/: CMakeLists.txt  Makefile  cmake_install.cmake  pi-toolchain.cmake
Firmware/code/big_brother/: CMakeLists.txt  big_brother.cpp  big_brother_state_machine.cpp  big_brother_state_machine.h
Firmware/code/common/: Makefile  shared_mem.cpp  signal_stages_1_3.sh  test_mem_shared_read.cpp  test_mem_shared_write.cpp
Firmware/code/common/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  shared_mem.cpp  shared_mem.h
Firmware/code/common/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  mock_stage3.cpp  shared_mem_destroy  shared_mem_read  shared_mem_write  test_mem_shared_destroy.cpp  test_mem_shared_read.cpp  test_mem_shared_write.cpp
Firmware/code/network_bb/: Makefile  Readme.md  band_buddy_msg.cpp  band_buddy_msg.h  band_buddy_server.cpp  header.fbs  header_generated.h  monster.fbs  monster_generated.h  sample_binary.cpp  server.cpp  stage1.fbs  test_client.cpp  wave_file.fbs
Firmware/code/network_bb/bb_msg_lib/: CMakeLists.txt  Makefile  band_buddy_msg.cpp  band_buddy_msg.h  band_buddy_server.cpp  band_buddy_server.h  cmake_install.cmake
Firmware/code/network_bb/flatbuffer_messages/: generate_fb_msg.sh  header.fbs  header_generated.h  stage1_generated.h  stage2.fbs  stage2_generated.h  wave_file_generated.h  web_server.fbs  web_server_generated.h  (+1 more)
Firmware/code/stage1/: CMakeLists.txt  Makefile  analog2wav.c  analog2wav.cpp  analog2wav_buttonpush.sh  cmake_install.cmake  pseudomake  test.c
Firmware/code/stage2/: band_buddy_msg.py  bb_types.py  stage2.py  types.py
Firmware/code/stage3/: CMakeLists.txt  Makefile  cmake_install.cmake  pseudomake  wavs2analog  wavs2analog.cpp
(+110 files in other folders)
